--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.UserFormMUI"
         tools:targetApi="31">
         <activity
+            android:name=".User_details"
+            android:exported="false" />
+        <activity
             android:name=".Recycler_View"
             android:exported="false" />
         <activity
