--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.databinding:databinding-runtime:7.4.1'
     testImplementation 'junit:junit:4.13.2'
